Colab을 통해 생성됨

--- a/1_data_preprocessing.ipynb
+++ b/1_data_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/seongwoojang1123/TMJ-osteoarthritis-diagnosis-/blob/main/1_data_preprocessing.ipynb",
-      "authorship_tag": "ABX9TyN+HuurT/YI4tZlQy5EFhEs",
+      "authorship_tag": "ABX9TyN9eoGliTOJPm1kfvdbnSu1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "7ps0ZkqaoXcy"
       },
@@ -66,9 +66,9 @@
           "height": 420
         },
         "id": "soCL5JZOpDSu",
-        "outputId": "b07f44a9-8b6a-44f9-db5d-d7049d6353dd"
+        "outputId": "78fadb3f-1831-45d2-e346-5f9f7b4ea88e"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d57eed2c-b691-4f49-8711-da88a4027455\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2b0c3b6c-513a-4fa5-8626-78cd264defde\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -213,7 +213,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d57eed2c-b691-4f49-8711-da88a4027455')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b0c3b6c-513a-4fa5-8626-78cd264defde')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -265,12 +265,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d57eed2c-b691-4f49-8711-da88a4027455 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2b0c3b6c-513a-4fa5-8626-78cd264defde button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d57eed2c-b691-4f49-8711-da88a4027455');\n",
+              "        const element = document.querySelector('#df-2b0c3b6c-513a-4fa5-8626-78cd264defde');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -290,8 +290,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-265879f0-914b-485c-9c15-e6b0f4bf1785\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-265879f0-914b-485c-9c15-e6b0f4bf1785')\"\n",
+              "    <div id=\"df-3e4355ec-7a0e-46df-870b-edcf7266478a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e4355ec-7a0e-46df-870b-edcf7266478a')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -410,7 +410,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-265879f0-914b-485c-9c15-e6b0f4bf1785 button');\n",
+              "            document.querySelector('#df-3e4355ec-7a0e-46df-870b-edcf7266478a button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -427,7 +427,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -451,9 +451,9 @@
           "height": 318
         },
         "id": "M-H-eUyGqLTo",
-        "outputId": "05c876d3-6348-4e70-c94b-b4c9c0f06981"
+        "outputId": "7d116253-651d-47f4-d457-e7121eba635e"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +501,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c2de8315-eba5-45a7-9651-43760e552b87\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-483f7d40-d482-4c4e-8ca4-23424e00ef15\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -625,7 +625,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2de8315-eba5-45a7-9651-43760e552b87')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-483f7d40-d482-4c4e-8ca4-23424e00ef15')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -677,12 +677,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c2de8315-eba5-45a7-9651-43760e552b87 button.colab-df-convert');\n",
+              "        document.querySelector('#df-483f7d40-d482-4c4e-8ca4-23424e00ef15 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c2de8315-eba5-45a7-9651-43760e552b87');\n",
+              "        const element = document.querySelector('#df-483f7d40-d482-4c4e-8ca4-23424e00ef15');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -702,8 +702,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-14827686-863a-4b6c-babe-4722deefc9ba\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-14827686-863a-4b6c-babe-4722deefc9ba')\"\n",
+              "    <div id=\"df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -822,7 +822,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-14827686-863a-4b6c-babe-4722deefc9ba button');\n",
+              "            document.querySelector('#df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -838,7 +838,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 7
         }
       ]
     },
@@ -868,9 +868,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kfvNI1SKqRaD",
-        "outputId": "47510ed1-11c8-487e-8653-c0d164544887"
+        "outputId": "8203604a-d816-4f65-db91-943b71a79fe4"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,13 +899,25 @@
         "# 데이터 저장\n",
         "data = pd.DataFrame(df)\n",
         "print(f'data.shape : {data.shape}')\n",
-        "data.to_csv('/content/drive/MyDrive/241023_TMJ OA data.csv', index=False, encoding = 'utf-8')"
+        "data.to_csv('/content/drive/MyDrive/250825_TMJ OA data.csv', index=False, encoding = 'utf-8')"
       ],
       "metadata": {
-        "id": "97afT3EqqbuP"
+        "id": "97afT3EqqbuP",
+        "outputId": "5bf4939a-d735-40ef-dc1f-73de00cb8b7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "data.shape : (1598, 9)\n"
+          ]
+        }
+      ]
     }
   ]
 }
