Colab을 통해 생성됨

--- a/1_data_preprocessing.ipynb
+++ b/1_data_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/seongwoojang1123/TMJ-osteoarthritis-diagnosis-/blob/main/1_data_preprocessing.ipynb",
-      "authorship_tag": "ABX9TyN9eoGliTOJPm1kfvdbnSu1",
+      "authorship_tag": "ABX9TyOa7H9/rtbR29/ql3q+v56q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {
         "id": "7ps0ZkqaoXcy"
       },
@@ -66,9 +66,9 @@
           "height": 420
         },
         "id": "soCL5JZOpDSu",
-        "outputId": "78fadb3f-1831-45d2-e346-5f9f7b4ea88e"
+        "outputId": "9b3ad38e-3645-4a87-c2b6-b535489bf353"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2b0c3b6c-513a-4fa5-8626-78cd264defde\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b4fe089e-e78c-4689-9408-1177a8d9591e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -213,7 +213,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b0c3b6c-513a-4fa5-8626-78cd264defde')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4fe089e-e78c-4689-9408-1177a8d9591e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -265,12 +265,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2b0c3b6c-513a-4fa5-8626-78cd264defde button.colab-df-convert');\n",
+              "        document.querySelector('#df-b4fe089e-e78c-4689-9408-1177a8d9591e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2b0c3b6c-513a-4fa5-8626-78cd264defde');\n",
+              "        const element = document.querySelector('#df-b4fe089e-e78c-4689-9408-1177a8d9591e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -290,8 +290,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3e4355ec-7a0e-46df-870b-edcf7266478a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e4355ec-7a0e-46df-870b-edcf7266478a')\"\n",
+              "    <div id=\"df-9cc36eec-95a7-4568-849d-bfeabfadd572\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9cc36eec-95a7-4568-849d-bfeabfadd572')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -410,7 +410,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3e4355ec-7a0e-46df-870b-edcf7266478a button');\n",
+              "            document.querySelector('#df-9cc36eec-95a7-4568-849d-bfeabfadd572 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -427,18 +427,9 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 11
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "mx0HZYJBp9Tz"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -451,9 +442,9 @@
           "height": 318
         },
         "id": "M-H-eUyGqLTo",
-        "outputId": "7d116253-651d-47f4-d457-e7121eba635e"
+        "outputId": "33d4a2c9-0f8b-403f-d11c-2a028f19264a"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +492,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-483f7d40-d482-4c4e-8ca4-23424e00ef15\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4ea1f2b8-5b1c-4462-b51b-e67c19ddd23a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -625,7 +616,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-483f7d40-d482-4c4e-8ca4-23424e00ef15')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ea1f2b8-5b1c-4462-b51b-e67c19ddd23a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -677,12 +668,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-483f7d40-d482-4c4e-8ca4-23424e00ef15 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4ea1f2b8-5b1c-4462-b51b-e67c19ddd23a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-483f7d40-d482-4c4e-8ca4-23424e00ef15');\n",
+              "        const element = document.querySelector('#df-4ea1f2b8-5b1c-4462-b51b-e67c19ddd23a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -702,8 +693,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6')\"\n",
+              "    <div id=\"df-4033e9c2-92fc-4587-ac89-ed1694193e3c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4033e9c2-92fc-4587-ac89-ed1694193e3c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -822,7 +813,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-2caf09ee-3a6a-4d1d-916c-79b4aada86d6 button');\n",
+              "            document.querySelector('#df-4033e9c2-92fc-4587-ac89-ed1694193e3c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -838,7 +829,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 12
         }
       ]
     },
@@ -868,9 +859,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kfvNI1SKqRaD",
-        "outputId": "8203604a-d816-4f65-db91-943b71a79fe4"
+        "outputId": "533a1143-2b7d-494d-ccec-56cad9de2205"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,16 +890,16 @@
         "# 데이터 저장\n",
         "data = pd.DataFrame(df)\n",
         "print(f'data.shape : {data.shape}')\n",
-        "data.to_csv('/content/drive/MyDrive/250825_TMJ OA data.csv', index=False, encoding = 'utf-8')"
+        "data.to_csv('/content/drive/MyDrive/TMJ OA/250825_TMJ OA data.csv', index=False, encoding = 'utf-8')"
       ],
       "metadata": {
         "id": "97afT3EqqbuP",
-        "outputId": "5bf4939a-d735-40ef-dc1f-73de00cb8b7d",
+        "outputId": "860016a9-3d4e-404a-e3fc-e215f55e7746",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
