--- a/5_TMJ_OA_CBCT_MRI_Traning.ipynb
+++ b/5_TMJ_OA_CBCT_MRI_Traning.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "10NobvubY3JXixVsigcG_ZvXcGPmlQAk7",
-      "authorship_tag": "ABX9TyM3IOg7nXKsU45mC0JfB8ii",
+      "authorship_tag": "ABX9TyN+7dzOtliX62NPaIqU9l0m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "id": "Hp4jsct-3K6K"
       },
@@ -73,7 +73,7 @@
       "cell_type": "code",
       "source": [
         "# 폴더 경로\n",
-        "base_dir = \"/content/drive/MyDrive/TMJ OA/학습_data_1,3(crop)\"\n",
+        "base_dir = \"/content/drive/MyDrive/TMJ OA/기존 CBCT 1,3 + NEW CBCT 1,2\"\n",
         "stages = ['train_data', 'validation_data', 'test_data']\n",
         "folders = ['Lt_Normal', 'Lt_OA', 'Rt_Normal', 'Rt_OA']\n",
         "label_mapping = {\n",
@@ -125,7 +125,7 @@
         "    data[stage]['label'] = np.array(data[stage]['label'])\n",
         "\n",
         "# 데이터 저장\n",
-        "pkl_file_path = os.path.join(base_dir, \"/content/drive/MyDrive/TMJ OA/학습_data_1,3(crop)/tmj_oa_CBCT1,3_dataset555.pkl\")\n",
+        "pkl_file_path = os.path.join(base_dir, \"/content/drive/MyDrive/TMJ OA/기존 CBCT 1,3 + NEW CBCT 1,2/tmj_oa_CBCT1,3 + NEW_dataset_555.pkl\")\n",
         "with open(pkl_file_path, 'wb') as f:\n",
         "    pickle.dump(data, f)\n",
         "\n",
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bz2_-MQD51v2",
-        "outputId": "e862ef72-d56c-4749-8b55-7839f72c3d00"
+        "outputId": "8f43bc7c-c63e-4e74-d5dc-6c81943c344f"
       },
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,10 +151,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 323/323 [00:10<00:00, 32.25it/s] \n",
-            "100%|██████████| 282/282 [00:07<00:00, 39.60it/s] \n",
-            "100%|██████████| 355/355 [00:09<00:00, 36.09it/s] \n",
-            "100%|██████████| 250/250 [00:06<00:00, 36.48it/s] \n"
+            "100%|██████████| 453/453 [00:09<00:00, 47.46it/s] \n",
+            "100%|██████████| 370/370 [00:07<00:00, 50.33it/s] \n",
+            "100%|██████████| 506/506 [00:10<00:00, 50.43it/s] \n",
+            "100%|██████████| 316/316 [00:06<00:00, 47.28it/s] \n"
           ]
         },
         {
@@ -168,10 +168,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 108/108 [00:04<00:00, 22.30it/s]\n",
-            "100%|██████████| 94/94 [01:14<00:00,  1.26it/s]\n",
-            "100%|██████████| 119/119 [00:10<00:00, 11.07it/s]\n",
-            "100%|██████████| 84/84 [01:03<00:00,  1.32it/s]\n"
+            "100%|██████████| 157/157 [00:03<00:00, 48.48it/s] \n",
+            "100%|██████████| 120/120 [00:02<00:00, 41.95it/s] \n",
+            "100%|██████████| 171/171 [00:03<00:00, 44.32it/s] \n",
+            "100%|██████████| 102/102 [00:02<00:00, 36.01it/s] \n"
           ]
         },
         {
@@ -185,17 +185,17 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 108/108 [00:05<00:00, 21.47it/s]\n",
-            "100%|██████████| 94/94 [01:21<00:00,  1.15it/s]\n",
-            "100%|██████████| 119/119 [00:03<00:00, 30.58it/s] \n",
-            "100%|██████████| 84/84 [01:07<00:00,  1.24it/s]\n"
+            "100%|██████████| 154/154 [00:03<00:00, 50.44it/s] \n",
+            "100%|██████████| 117/117 [00:03<00:00, 38.42it/s] \n",
+            "100%|██████████| 168/168 [00:03<00:00, 48.08it/s] \n",
+            "100%|██████████| 111/111 [00:02<00:00, 39.22it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Data successfully saved to /content/drive/MyDrive/TMJ OA/학습_data_1,3(crop)/tmj_oa_CBCT1,3_dataset555.pkl\n"
+            "Data successfully saved to /content/drive/MyDrive/TMJ OA/기존 CBCT 1,3 + NEW CBCT 1,2/tmj_oa_CBCT1,3 + NEW_dataset_555.pkl\n"
           ]
         }
       ]
@@ -207,8 +207,7 @@
         "    loaded_data = pickle.load(f)\n",
         "\n",
         "for stage in stages:\n",
-        "    print(f\"Stage: {stage}\")\n",
-        "    print(f\"Number of Images: {len(loaded_data[stage]['image'])}\")\n",
+        "    print(f\"Stage: {stage}\")    print(f\"Number of Images: {len(loaded_data[stage]['image'])}\")\n",
         "    print(f\"Patient IDs: {loaded_data[stage]['patient_id'][:5]}\")\n",
         "    print(f\"Sides: {loaded_data[stage]['side'][:5]}\")\n",
         "    print(f\"Labels: {loaded_data[stage]['label'][:5]}\")\n",
@@ -219,29 +218,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XY1la-1_6TCq",
-        "outputId": "9b5329c1-6f22-4f4e-eca6-676c7e19e8f2"
+        "outputId": "2839eb3b-25b7-43a9-f92e-d672052563c9"
       },
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Stage: train_data\n",
-            "Number of Images: 1210\n",
-            "Patient IDs: ['20699490', '20456594', '20608103', '20695175', '20671412']\n",
+            "Number of Images: 1645\n",
+            "Patient IDs: ['11053022', '14957701', '11858325', '11981447', '14966086']\n",
             "Sides: ['Lt', 'Lt', 'Lt', 'Lt', 'Lt']\n",
             "Labels: [0 0 0 0 0]\n",
             "------------------------------\n",
             "Stage: validation_data\n",
-            "Number of Images: 405\n",
-            "Patient IDs: ['20669741', '20684440', '20484472', '20239061', '20683752']\n",
+            "Number of Images: 550\n",
+            "Patient IDs: ['11177143', '11660540', '14988707', '14951489', '10664250']\n",
             "Sides: ['Lt', 'Lt', 'Lt', 'Lt', 'Lt']\n",
             "Labels: [0 0 0 0 0]\n",
             "------------------------------\n",
             "Stage: test_data\n",
-            "Number of Images: 405\n",
-            "Patient IDs: ['20694460', '20680029', '20705040', '20679945', '20695974']\n",
+            "Number of Images: 550\n",
+            "Patient IDs: ['14003185', '12725494', '14976260', '11880794', '15024738']\n",
             "Sides: ['Lt', 'Lt', 'Lt', 'Lt', 'Lt']\n",
             "Labels: [0 0 0 0 0]\n",
             "------------------------------\n"
@@ -412,7 +411,7 @@
         "id": "-n39WjwC6d2R",
         "outputId": "e36e1928-b525-40e5-fc7c-b1559d47ef7f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +612,7 @@
         "id": "f-IBEAQO7AP7",
         "outputId": "c1597061-8b2d-49f0-aa21-bc3cecab0565"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +792,7 @@
         "id": "PZrHrqZhC56Z",
         "outputId": "8637f688-66b0-4602-baf9-45b6ba7a0c48"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +945,7 @@
         "id": "jfm5tmPBH8sN",
         "outputId": "3921ab84-258f-49cc-83f2-09896b8fba66"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1042,7 @@
         "id": "js3Vv41QIaPz",
         "outputId": "9fde3cee-c0ff-4fa3-bc5f-77d9510e49cb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
